# quadrosdesaude

./: .gitignore  404.html  Dockerfile.test  GEMINI.MD  LICENSE.md  README.MD  build.py  index.html  iniciar_ui.py  mkdocs.yml  next_release.md  objects.inv  pyproject.toml  setup.py
api/: index.html
docs/: api.md  arquitetura.md  index.md
scripts/unix/: build_manylinux.sh  run_ui.sh  setup_env.sh
scripts/windows/: publish_pypi.ps1  run_ui.bat  run_ui.ps1  setup_env.bat  setup_env.ps1
search/: search_index.json
src/quadrosdesaude/: __init__.py  logger.py  utils.py
src/quadrosdesaude/c_src/: blast.c  decompress.c
src/quadrosdesaude/conversao/: conversor.py  orquestrador.py  parser.py
src/quadrosdesaude/extracao/: ftp.py  inventario.py
stylesheets/: extra.css
tests/: test_conversao.py  test_extracao.py
ui_quadrosdesaude/: 1_Home.py  ui_utils.py
ui_quadrosdesaude/pages/: 2_Extracao_FTP.py  3_Descompressao.py  4_Dominio_Parquet.py
