[project]
name = "quadrosdesaude"
version = "0.2.5"
description = "Ferramentas para processar dados do Datasus (Sistema Público de Saúde)."
authors = [
    {name = "André Quadros", email = "andre@quadrosdesaude.com.br"}
]
license = "MIT"
readme = "README.MD"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://quadrosdesaude.com.br"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
dbfread = ">=2.0.7,<3.0.0"
polars = ">=1.34.0,<2.0.0"
pyarrow = ">=21.0.0,<22.0.0"
tqdm = ">=4.67.1,<5.0.0"
psutil = ">=7.1.1,<8.0.0"
setuptools = "^80.9.0"
duckdb = ">=1.0.0"
streamlit = ">=1.30.0"


[tool.poetry]
packages = [{include = "quadrosdesaude", from = "src"}]
include = [
    { format = "wheel", path = "src/quadrosdesaude/*.so" },
    { format = "wheel", path = "src/quadrosdesaude/*.pyd" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "twine (>=6.2.0,<7.0.0)",
]
doc = [
    "mkdocs-material (>=9.6.22,<10.0.0)",
    "mkdocstrings (>=0.30.1,<0.31.0)",
    "mkdocstrings-python (>=1.18.2,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"
